# longjrm-py

./: .env_example  .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: publish.yml
docs/: api-reference.md  config.md  connection.md  database.md  migration.md  requirement.txt  spark.md  transaction-management.md
longjrm/: .env_example  __init__.py  config.py  drivers.py  dsn_driver_helper.py  dsn_parts_helper.py  file_loader.py  load_env.py  logger.py
longjrm/config/: config.py  runtime.py
longjrm/connection/: connectors.py  db_lib_map.json  dbconn.py  driver_map.json  driver_registry.py  dsn_parts_helper.py  pool.py  pool_backup.py
longjrm/database/: __init__.py  db.py  db2.py  generic.py  mysql.py  oracle.py  placeholder_handler.py  postgres.py  spark.py  sqlite.py  sqlserver.py
longjrm/env/: config_dev.ini
longjrm/tests/: README.md  bulk_load_test.py  connection_test.py  delete_test.py  insert_test.py  merge_test.py  placeholder_test.py  pool_test.py  script_test.py  select_test.py  spark_test.py  stream_test.py  test_utils.py  transaction_test.py  update_test.py
longjrm/tests/docker/spark-cluster/: README.md  client.Dockerfile  docker-compose.yml
longjrm/utils/: data.py  sql.py
test_config/: dbinfos_example.json  jrm.config_example.json
